2018-09-23  Jim Fowler  <jrf@biblion>

	* Tools/python/setup.py: change validateXML to validate_xml
	in the scripts line. Cleaned up to meet PEP-8 standards.

2018-09-22  Jim Fowler  <jrf@biblion>

	* Tools/python: ran upper level programs through pylint
	and edited ajbbooks, journals, ppxml, and validate_xml
	to meet PEP-8 standard.

	* Tools/python/validate_xml: changed name of validateXML
	to meet PEP-8 standard

2018-09-21  Jim Fowler  <jrf@biblion>

	* Tools/python/bookentry/jsearch.py: rename journalsearch.py to
	jsearch.py.  This cleared up an issue on the Mac with a conflict
	between journalSearch.py and journalsearch.py.

	* INSTALL: updated checkout and installation instructions.

	* COPYING: added copyright and committed COPYING.

	* Tools/xml: Moved Tools/python/bookentry/xml to Tools/xml.
	Updated .gitignore and removed validation tests when reading
	bookfiles or journalfiles.

	* Tools/python/bookentry/journalfile.py (JournalFile.read_xml_file):
	removed read of journalfile.xsd and the Parser variable.

	* Tools/python/bookentry/bookfile.py (BookFile.readFile_XML):
	removed read of bookfile.xsd and the Parser variable.

2018-09-09  Jim Fowler  <jrf@biblion>

	* all: added standard copyright to all files that require it.

	* Tools/python/doc/journals/journalxml.rst: Also fixed title
	syntax in journalxml.rst

	* Tools/python/doc/journals/classes.rst: correct some file names
	as well as syntax in the sphinx documents.

	* Tools/emacs/books20.el (replace-comments): Corrected syntax and
	added proper comments to html, php, xml, and xsd files.  These
	comments now use "<!--" and "-->" to start and end comments.

	* Tools/python/doc/Makefile.am: Corrected problem with the
	documetation builds and installs.

2018-09-08  Jim Fowler  <jrf@biblion>

	* configure.ac: got all Makefile.am targets working except
	Tools/python/doc.  The build for sphinx is broken at the moment.
	Checked in updated Makefile.am and other files

2018-09-07  Jim Fowler  <jrf@biblion>
