@@ -1,5 +1,8 @@
 2018-09-23  Jim Fowler  <jrf@biblion>
 
+	* Tools/python/bookentry/pagination_xml.py: adde p1-5 for
+	unknown sections of a book.
+
 	* Tools/python/setup.py: change validateXML to validate_xml
 	in the scripts line. Cleaned up to meet PEP-8 standards.
 
